adding routing, login, home, and register.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,19 @@
+//Colors
+$DarkOliveGreen: #606C38;
+$ArmyGreen: #445128;
+$KombuGreen: #283618;
+$Artichoke: #93987C;
+$Cornsilk: #FEFAE0;
+$DeepChampagne: #EECE9F;
+$Fawn: #DDA15E;
+$Bronze: #CD8742;
+$LiverDogs: #BC6C25;
+
 .App {
   text-align: center;
 }
 
-.App-logo {
+/*.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -36,3 +47,4 @@
     transform: rotate(360deg);
   }
 }
+*/
