--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -6,9 +6,9 @@
 
 .auth_title{
     color: $ArmyGreen;
-    font-size: 36px;
+    font-size: 32px;
     font-weight: 400px;
-    padding-block: 20px;
+    padding-block: 10px;
 }
 
 .auth_label{
@@ -19,10 +19,23 @@
 .auth_button{
     background-color: $LiverDogs;
     border: $Bronze;
+    color: white;
 
     &:hover {
         background-color: $DeepChampagne;
         border: $Bronze;
         color: $ArmyGreen;
     }
+
+    &:active {
+        background-color: $DeepChampagne;
+        border: $Bronze;
+        color: $ArmyGreen;
+    }
+}
+
+.logo {
+    height: 250px;
+    width: 250px;
+    padding: 10px;
 }
